Update cv.md, fix `critlib-feelings` link, fix paginator link contrast

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -38,3 +38,9 @@
 @import "minimal-mistakes/archive";
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
+
+/* My additions */
+
+.pagination li a.disabled {
+  color: rgba(241,241,241,0.8);
+}
